Subiendo ejercicio totalmente funcional